[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiogram3-metrics"
version = "0.1.0"
description = "Prometheus metrics middleware for aiogram 3.x bots"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Phasalo" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: AsyncIO",
]
dependencies = [
    "aiogram>=3.28.0",
    "prometheus-client>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["aiogram_metrics"]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.format]
quote-style = "single"
